# diffusion2D

./: README.md  pyproject.toml
freifrauvonbleifrei-diffusion2D/: diffusion2d.py  diffusionplot.py
