[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freifrauvonbleifrei-diffusion2D"
description = "A small diffusion confusion"
readme = "README.md"
version = "0.0.1"
keywords = ["diffusion", "viz"]
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "requests",
    'importlib-metadata; python_version>"3.0"',
]
dynamic = []